update jvm memo